--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "axios": "^0.18.0",
     "react": "16.8.3",
-    "react-native": "0.59.8"
+    "react-native": "0.59.8",
+    "react-router-native": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.4.5",
