--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.18.0",
     "react": "16.8.3",
     "react-native": "0.59.8",
+    "react-native-firebase": "^5.4.2",
     "react-native-gesture-handler": "^1.2.2",
     "react-navigation": "^3.11.0",
     "react-router-native": "^5.0.0"
