--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-native": "0.59.8",
     "react-native-firebase": "^5.4.2",
     "react-native-gesture-handler": "^1.2.2",
+    "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.11.0",
     "react-router-native": "^5.0.0"
   },
